feat: 로컬 환경 구축용 docker-compose 정의

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,12 @@ services:
       POSTGRES_USER: dgdg
       POSTGRES_PASSWORD: dgdg
     volumes:
+      - ./init-local-db.sql:/docker-entrypoint-initdb.d/init-local-db.sql
       - ~/dgdg-api/data/:/var/lib/postgresql/data
+  redis:
+    image: redis
+    container_name: dgdg-api-redis
+    command: redis-server --port 6382
+    restart: unless-stopped
+    volumes:
+      - ~/dgdg-api/redis:/data
