--- a/dgdg-api/src/main/resources/application-cache.yml
+++ b/dgdg-api/src/main/resources/application-cache.yml
@@ -7,7 +7,17 @@ spring:
   config:
     activate:
       on-profile:
-        - local
+        - local-pg
+---
+spring:
+  cache:
+    type: redis
+  redis:
+    host: localhost
+    port: 6382
+  config:
+    activate:
+      on-profile:
         - local-pg
 ---
 spring:
