--- a/dgdg-api/src/main/resources/application-s3.yml
+++ b/dgdg-api/src/main/resources/application-s3.yml
@@ -9,3 +9,7 @@ cloud:
       static: ap-northeast-2
     stack:
       auto: false
+logging:
+  level:
+    com.amazonaws.util.EC2MetadataUtils: error
+    com.amazonaws.internal.InstanceMetadataServiceResourceFetcher: error
