fix: local docker-compose redis 포트 바인딩

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,9 @@ services:
   redis:
     image: redis
     container_name: dgdg-api-redis
-    command: redis-server --port 6382
+    command: redis-server --port 6379
+    ports:
+      - "6382:6379"
     restart: unless-stopped
     volumes:
       - ~/dgdg-api/redis:/data
