--- a/dgdg-api/src/main/resources/application-aws.yml
+++ b/dgdg-api/src/main/resources/application-aws.yml
@@ -5,7 +5,9 @@ aws:
 spring:
   config:
     activate:
-      on-profile: local,local-pg
+      on-profile:
+        - local
+        - local-pg
 aws:
   encrypt:
     secret-name: dgdg/local/secrets
