--- a/.github/workflows/dev-deployment.yaml
+++ b/.github/workflows/dev-deployment.yaml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: [develop]
+    branches: [develop, fix/cicd]
 
 name: 개발 서버 ECS 배포
 
@@ -24,7 +24,8 @@ jobs:
       - name: Set semantic version
         id: dev-version
         run: |
-          echo "::set-output name=version::$(cat VERSION)"
+          VERSION=`cat ./VERSION`-${{ github.run_id }}
+          echo "::set-output name=version::$VERSION"
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -38,7 +39,7 @@ jobs:
           IMAGE_TAG: ${{ steps.dev-version.outputs.version }}
         run: |
           docker build --build-arg AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID --build-arg AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
