--- a/.github/workflows/prod-deployment.yaml
+++ b/.github/workflows/prod-deployment.yaml
@@ -2,7 +2,7 @@ on:
   push:
     branches:
       - master
-      - feature/production-cicd
+      - fix/cicd
 
 name: 운영 환경 서버 ECS 배포
 
@@ -42,6 +42,7 @@ jobs:
           docker build --build-arg AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID --build-arg AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
       - name: Download task definition
