--- a/.github/workflows/dev-deployment.yaml
+++ b/.github/workflows/dev-deployment.yaml
@@ -25,7 +25,7 @@ jobs:
         id: dev-version
         run: |
           VERSION=`cat ./VERSION`-${{ github.run_id }}
-          echo "::set-output name=version::$VERSION"
+          echo "::set-output name=version::$(cat VERSION)"
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -39,7 +39,6 @@ jobs:
           IMAGE_TAG: ${{ steps.dev-version.outputs.version }}
         run: |
           docker build --build-arg AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID --build-arg AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
