feature : 운영 SQL 스크립트 추가

--- a/dgdg-domain/src/main/resources/application-db.yml
+++ b/dgdg-domain/src/main/resources/application-db.yml
@@ -56,7 +56,7 @@ spring:
       pool-name: dev-pg-pool
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
 ---
 spring:
   config:
