--- a/dgdg-domain/build.gradle
+++ b/dgdg-domain/build.gradle
@@ -22,5 +22,6 @@ dependencies {
     api("com.querydsl:querydsl-jpa")
     kapt("com.querydsl:querydsl-apt::jpa")
 
-
+    // flyway
+    implementation("org.flywaydb:flyway-core")
 }
