--- a/dgdg-domain/src/main/resources/application-db.yml
+++ b/dgdg-domain/src/main/resources/application-db.yml
@@ -26,7 +26,7 @@ spring:
       username: sa
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
   flyway:
     enabled: false
 ---
