--- a/dgdg-domain/src/main/resources/application-db.yml
+++ b/dgdg-domain/src/main/resources/application-db.yml
@@ -61,6 +61,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+    properties:
+      hibernate:
+        show_sql: false
+        format_sql: false
+        use_sql_comments: false
 ---
 spring:
   config:
@@ -72,8 +77,13 @@ spring:
       jdbc-url: ${jdbc-url}
       username: ${jdbc-username}
       password: ${jdbc-password}
-      maximum-pool-size: 30
+      maximum-pool-size: 20
       pool-name: prod-pg-pool
   jpa:
     hibernate:
       ddl-auto: none
+    properties:
+      hibernate:
+        show_sql: false
+        format_sql: false
+        use_sql_comments: false
