--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ buildscript {
         springBootVersion = '2.5.4'
         kotlinVersion = '1.5.31'
         kotestVersion = '4.4.3'
-
         springCloudVersion = '2020.0.4'
         lombokPluginVersion = '6.1.0'
     }
@@ -85,6 +84,9 @@ subprojects {
         // kotest
         testImplementation("io.kotest:kotest-runner-junit5:${kotestVersion}")
         testImplementation("io.kotest:kotest-extensions-spring:${kotestVersion}")
+
+        // mockk
+        testImplementation("io.mockk:mockk:1.12.0")
     }
 
     configurations {
