--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,8 @@ buildscript {
         springBootVersion = '2.5.4'
         kotlinVersion = '1.5.31'
         kotestVersion = '4.4.3'
-
-        projectreactorVersion = '1.0.1.RELEASE'
-
         springCloudVersion = '2020.0.4'
-        kotlinLombokVersion = '1.6.0-RC'
-        lombokPluginVersion = '6.2.0'
-        embeddedRedisVersion = "0.7.2"
+        lombokPluginVersion = '6.1.0'
     }
     repositories {
         maven {
@@ -22,7 +17,7 @@ buildscript {
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
-        classpath("org.jetbrains.kotlin:kotlin-lombok:${kotlinLombokVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-lombok:${kotlinVersion}")
         classpath("io.freefair.gradle:lombok-plugin:${lombokPluginVersion}")
     }
 }
@@ -86,16 +81,12 @@ subprojects {
         compileOnly'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
 
-        implementation 'org.springframework.boot:spring-boot-starter-webflux'
-        implementation ("org.projectreactor:reactor-spring:${projectreactorVersion}")
-
-        // Redis
-        implementation("org.springframework.boot:spring-boot-starter-data-redis")
-        implementation("it.ozimov:embedded-redis:${embeddedRedisVersion}")
-
         // kotest
         testImplementation("io.kotest:kotest-runner-junit5:${kotestVersion}")
         testImplementation("io.kotest:kotest-extensions-spring:${kotestVersion}")
+
+        // mockk
+        testImplementation("io.mockk:mockk:1.12.0")
     }
 
     configurations {
