--- a/dgdg-api/build.gradle
+++ b/dgdg-api/build.gradle
@@ -12,6 +12,9 @@ dependencies {
     // spring web
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
+    // webflux
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
     // spring cloud
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
@@ -30,6 +33,5 @@ dependencies {
 
     // Redis
     implementation("org.springframework.boot:spring-boot-starter-data-redis")
-    implementation("it.ozimov:embedded-redis:${embeddedRedisVersion}")
 }
 
